--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -2,16 +2,32 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 400;
-  src: url("../../fonts/montserrat-v25-latin-regular.woff2"),
-    url("../../fonts/montserrat-v25-latin-regular.woff");
+  src: url("../../fonts/Montserrat-Regular.woff2"),
+    url("../../fonts/Montserrat-Regular.woff");
   font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../../fonts/Montserrat-Medium.woff2") format("woff2"),
+    url("../../fonts/Montserrat-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../../fonts/Montserrat-SemiBold.woff2") format("woff2"),
+    url("../../fonts/Montserrat-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 700;
-  src: url("../../fonts/montserrat-v25-latin-regular.woff2"),
-    url("../../fonts/montserrat-v25-latin-regular.woff");
+  src: url("../../fonts/Montserrat-Bold.woff2"),
+    url("../../fonts/Montserrat-Bold.woff");
   font-display: swap;
 }
