--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,3 +4,17 @@
 @import "./global/normalize.less";
 @import "./global/global.less";
 @import "./blocks/visually-hidden.less";
+@import "./blocks/main-header.less";
+@import "./blocks/main-nav.less";
+@import "./blocks/products-slider.less";
+@import "./blocks/pre-header.less";
+@import "./blocks/features.less";
+@import "./blocks/catalog.less";
+@import "./blocks/control-label.less";
+@import "./blocks/catalog-form.less";
+@import "./blocks/sort.less";
+@import "./blocks/products.less";
+@import "./blocks/pagination.less";
+@import "./blocks/location.less";
+@import "./blocks/main-footer.less";
+@import "./blocks/footer-nav.less";
