--- a/source/less/blocks/pre-header.less
+++ b/source/less/blocks/pre-header.less
@@ -6,4 +6,12 @@
   color: #7859cf;
   text-transform: uppercase;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 248px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 100px;
+  }
 }
