--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,11 +1,27 @@
 .catalog {
   padding: 0 20px;
   background-color: #f8f8f8;
+
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 40px;
+  }
 }
 
 .catalog .pre-header {
   margin-top: 0;
   padding-top: 50px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 80px;
+    margin-bottom: 4px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+    padding-top: 100px;
+  }
 }
 
 .catalog__header {
@@ -13,15 +29,12 @@
   margin-bottom: 20px;
   .font-main(700, 24px, 36px);
   text-align: center;
-}
 
-.catalog-form__price-input {
-  box-sizing: border-box;
-  width: 118px;
-  height: 38px;
-  padding: 7px 10px;
-  border: 2px solid #9070ec;
-  border-radius: 4px;
-  text-align: center;
-  .font-main(500, 16px, 24px);
+  @media (min-width: @tablet-width) {
+    .font-main(700, 42px, 64px);
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
 }
