--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,6 +1,23 @@
+.main-footer {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
 .main-footer__section {
   padding: 20px;
   border-bottom: 1px solid #f0ebff;
+
+  @media (min-width: @tablet-width) {
+    border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 50px;
+  }
 }
 
 .main-footer__header {
@@ -36,6 +53,14 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
+
+  @media (min-width: @tablet-width) {
+    width: 223px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 298px;
+  }
 }
 
 .main-footer__contacts .main-footer__header {
@@ -84,13 +109,13 @@
   .font-main(400, 12px, 16px);
   color: #bdbdbd;
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    width: 12px;
-    height: 16px;
-    background-image: url("../../img/logo-academy.svg");
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    text-align: center;
   }
+}
+
+.main-footer__academy svg {
+  position: relative;
+  top: 5px;
 }
