--- a/source/less/blocks/products-slider.less
+++ b/source/less/blocks/products-slider.less
@@ -2,11 +2,51 @@
   background-color: @background-flat-white;
   display: grid;
   grid-template-columns: 20px 1fr 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 188px;
+    grid-template-columns: 80px 1fr 80px;
+    height: 640px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
+    height: 714px;
+  }
+}
+
+.products-slider__central {
+  margin-top: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  @media (min-width: @desktop-width) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .products-slider__image {
   display: block;
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 476px;
+    height: 476px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0;
+    margin-top: 30px;
+    margin-left: 25px;
+    margin-right: 30px;
+    width: 600px;
+    height: 600px;
+  }
 }
 
 .products-slider__arrow {
@@ -17,10 +57,25 @@
   &--next {
     rotate: 180deg;
   }
+
+  @media (min-width: @tablet-width) {
+    height: 640px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 714px;
+  }
 }
 
-.products-slider__central {
-  margin-top: 20px;
+.products-slider__description {
+  @media (min-width: @tablet-width) {
+    order: -1;
+  }
+
+  @media (min-width: @desktop-width) {
+    order: 0;
+    width: 625px;
+  }
 }
 
 .products-slider__special {
@@ -31,6 +86,17 @@
   .font-main(700, 12px, 16px);
   text-transform: uppercase;
   color: #7859cf;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 60px;
+    margin-bottom: 4px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 180px;
+    width: 625px;
+    text-align: left;
+  }
 }
 
 .products-slider__header {
@@ -38,6 +104,16 @@
   margin-bottom: 10px;
   .font-main(700, 36px, 48px);
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+    margin-bottom: 16px;
+    .font-main(700, 56px, 80px);
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
+  }
 }
 
 .products-slider__text {
@@ -45,6 +121,14 @@
   margin-bottom: 20px;
   .font-main(400, 14px, 20px);
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    .font-main(400, 20px, 32px);
+  }
+
+  @media (min-width: @desktop-width) {
+    text-align: left;
+  }
 }
 
 .products-slider__prices {
@@ -52,6 +136,15 @@
   margin-bottom: 56px;
   display: flex;
   justify-content: center;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 20px;
+    .font-main(400, 20px, 32px);
+  }
+
+  @media (min-width: @desktop-width) {
+    justify-content: left;
+  }
 }
 
 .products-slider__price {
@@ -65,6 +158,14 @@
     .font-main(400, 16px, 16px);
     color: #7859cf;
   }
+
+  @media (min-width: @tablet-width) {
+    margin-right: 20px;
+
+    &--previous {
+      margin-right: 6px;
+    }
+  }
 }
 
 .products-slider__order {
@@ -75,4 +176,33 @@
   border: none;
   .font-main(400, 16px, 24px);
   color: @base-white;
+}
+
+.products-slider__pagination {
+  @media (min-width: @desktop-width) {
+    margin: 0 auto;
+    margin-bottom: 60px;
+    display: flex;
+    align-items: center;
+    width: 202px;
+    height: 24px;
+  }
+}
+
+
+.products-slider__page {
+  @media (min-width: @desktop-width) {
+    display: block;
+    width: 62px;
+    height: 4px;
+    background-color: #ffffff;
+
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+
+    &--active {
+      background-color: #7859cf;
+    }
+  }
 }
