--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -1,5 +1,18 @@
 .products__list {
   .site-list();
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 70px;
+    display: grid;
+    grid-template-columns: repeat(2, 349px);
+    grid-template-rows: 440px;
+    gap: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: repeat(3, 317px);
+    grid-template-rows: 460px;
+  }
 }
 
 .products__item {
@@ -10,18 +23,35 @@
   height: 420px;
   background-color: @base-white;
 
-  &:not(:last-child) {
-    margin-bottom: 20px;
+  @media (max-width: @mobile-width-only) {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+
+    &:last-child {
+      margin-bottom: 40px;
+    }
   }
 
-  &:last-child {
-    margin-bottom: 40px;
+  @media (min-width: @tablet-width) {
+    height: 440px;
+    box-sizing: border-box;
+    padding: 30px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 460px;
   }
 }
 
 .products__image {
   display: block;
   margin: 20px auto 24px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
 }
 
 .products__header {
@@ -29,17 +59,30 @@
   margin-bottom: 4px;
   .font-main(700, 18px, 32px);
   color: @base-black;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 10px;
+    .font-main(700, 24px, 36px);
+  }
 }
 
 .products__description {
   margin: 0;
   margin-bottom: 16px;
   .font-main(400, 14px, 20px);
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 20px;
+  }
 }
 
 .products__to-cart {
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .products__price {
