--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -3,9 +3,12 @@
   background-color: #f8f8f8;
 
   @media (min-width: @desktop-width) {
+    max-width: 1360px;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    padding: 0 40px;
+    padding-left: calc((100% - 1360px) / 2);
+    padding-right: calc((100% - 1360px) / 2);
   }
 }
 
