--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -30,6 +30,8 @@
   }
 
   @media (min-width: @desktop-width) {
+    max-width: 1360px;
+    margin: 0 auto;
     margin-bottom: 96px;
     grid-template-columns: repeat(4, 318px);
     grid-template-rows: 170px;
