--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -47,6 +47,15 @@
   .font-main(500, 12px, 16px);
   color: #333333;
   text-transform: uppercase;
+
+  &:hover,
+  &:focus {
+    color: #9070ec;
+  }
+
+  &:active {
+    color: #593cac;
+  }
 }
 
 .main-footer__contacts {
@@ -108,6 +117,22 @@
   padding: 20px 57px 30px;
   .font-main(400, 12px, 16px);
   color: #bdbdbd;
+
+  &:hover {
+    color: #7859cf;
+  }
+
+  &:focus {
+    color: #593cac;
+  }
+
+  &:hover svg path {
+    fill: #7859cf;
+  }
+
+  &:focus svg path {
+    fill: #593cac;
+  }
 
   @media (min-width: @tablet-width) {
     width: 100%;
