--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,6 +2,30 @@
   display: flex;
   flex-direction: column;
   min-width: 320px;
+
+  &--opened .main-nav__mobile-list {
+    @media (max-width: @mobile-width-only) {
+      display: block;
+    }
+  }
+
+  &--closed .main-nav__mobile-list {
+    @media (max-width: @mobile-width-only) {
+      display: none;
+    }
+  }
+
+  &--nojs .main-nav__burger {
+    display: none;
+  }
+
+  &--opened .main-nav__burger {
+    background: url("../../img/burger-close.svg") no-repeat center;
+  }
+
+  &--closed .main-nav__burger {
+    background: url("../../img/burger.svg") no-repeat center;
+  }
 }
 
 .main-nav__head {
@@ -10,7 +34,16 @@
 }
 
 .main-nav__logo {
-  margin: 12px 20px;
+  margin: 10px 20px;
+
+  &:hover,
+  &:focus {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.5;
+  }
 
   @media (min-width: @tablet-width) {
     width: 82px;
@@ -82,6 +115,15 @@
     background-image: url("../../img/cart.svg");
   }
 
+  &:hover span,
+  &:focus span {
+    color: #7859cf;
+  }
+
+  &:active {
+    background-color: #f0ebff;
+  }
+
   @media (min-width: @tablet-width) {
     height: 80px;
   }
@@ -118,6 +160,10 @@
   height: 60px;
   border: none;
   background: url("../../img/burger.svg") no-repeat center;
+
+  &:active {
+    background-color: #f0ebff;
+  }
 
   @media (min-width: @tablet-width) {
     display: none;
@@ -161,7 +207,7 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding: 32px 20px;
+    padding: 30px 20px;
     border: none;
 
     &--current {
@@ -175,4 +221,13 @@
   .font-main(500, 12px, 16px);
   color: @base-black;
   text-transform: uppercase;
+
+  &:hover,
+  &:focus {
+    color: #7859cf;
+  }
+
+  &:active {
+    background-color: #f0ebff;
+  }
 }
