--- a/source/less/blocks/products.less
+++ b/source/less/blocks/products.less
@@ -2,7 +2,9 @@
   .site-list();
 
   @media (min-width: @tablet-width) {
+    margin: 0 auto;
     margin-bottom: 70px;
+    max-width: 728px;
     display: grid;
     grid-template-columns: repeat(2, 349px);
     grid-template-rows: 440px;
@@ -10,6 +12,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    max-width: 1011px;
     grid-template-columns: repeat(3, 317px);
     grid-template-rows: 460px;
   }
@@ -23,14 +26,12 @@
   height: 420px;
   background-color: @base-white;
 
-  @media (max-width: @mobile-width-only) {
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
 
-    &:last-child {
-      margin-bottom: 40px;
-    }
+  &:last-child {
+    margin-bottom: 40px;
   }
 
   @media (min-width: @tablet-width) {
