--- a/source/less/blocks/sort.less
+++ b/source/less/blocks/sort.less
@@ -3,11 +3,16 @@
   justify-content: space-between;
 
   @media (min-width: @tablet-width) {
+    margin: 0 auto;
     margin-bottom: 30px;
+    max-width: 728px;
     justify-content: right;
   }
 
   @media (min-width: @desktop-width) {
+    margin: 0;
+    margin-bottom: 30px;
+    max-width: 1011px;
     flex-direction: row;
   }
 }
