--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,7 @@
 @import "./global/normalize.less";
 @import "./global/global.less";
 @import "./blocks/visually-hidden.less";
+@import "./blocks/buttons.less";
 @import "./blocks/main-header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/products-slider.less";
@@ -13,6 +14,7 @@
 @import "./blocks/control-label.less";
 @import "./blocks/catalog-form.less";
 @import "./blocks/sort.less";
+@import "./blocks/no-ui-slider.less";
 @import "./blocks/products.less";
 @import "./blocks/pagination.less";
 @import "./blocks/location.less";
