--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -83,6 +83,15 @@
   .font-main(400, 14px, 20px);
   color: #333333;
 
+  &:hover,
+  &:focus {
+    color: #9070ec;
+  }
+
+  &:active {
+    color: #593cac;
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -100,6 +109,15 @@
   margin-bottom: 0;
   .font-main(400, 14px, 20px);
   color: #333333;
+
+  &:hover,
+  &:focus {
+    color: #9070ec;
+  }
+
+  &:active {
+    color: #593cac;
+  }
 
   &::before {
     content: "";
